--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,10 +3,12 @@
 margin: 0%;
 padding: 0%;
 box-sizing: border-box;
+
 }
 
 
 body {
+      
 gap: 1em;
 min-height: 100vh;
 display: grid;
@@ -50,6 +52,28 @@ border: 2px solid white;
 --red: #ff0000;
 }
     
+
+ul {
+     display: flex;
+     flex-direction: row; 
+     justify-content: space-around;
+     list-style-type: none;
+     flex-wrap: wrap;
+}
+li {
+      padding: 6px 0;
+}
+
+a {
+      position: relative; /*Static?*/
+      display: block;
+      padding: 4px 0;
+      font-family: sans-serif;
+      color: #ecf0f1;
+      text-decoration: none;
+      text-transform: uppercase;
+}
+
 /* Styling */
 
 
@@ -63,5 +87,35 @@ border: 2px solid white;
               'nav footer' auto
             / 12em 1fr;
       }
+
+      ul {
+            display: flex;
+            height: 45em;
+            outline: 2px dotted white;
+            flex-direction: column; 
+            justify-content: space-around;
+            list-style-type: none;
+           
+       }
+       li {
+             padding: 6px 0;
+       }
+       
+       a {
+             position: relative; /*Static?*/
+             display: block;
+             padding: 4px 0;
+             font-family: sans-serif;
+             color: #ecf0f1;
+             text-decoration: none;
+             text-transform: uppercase;
+             -webkit-transition: color 1s;
+        transition: color 1s;  /*change color after finish */
+
+       }
+
+       a:hover {
+            color: #ff0000;
+        }
 
 }
