--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -87,7 +87,11 @@ li {
 
 
 
-
+.right-bar {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+}
 
 .topbar {
       font-size: 11px;
@@ -232,41 +236,79 @@ flex-wrap: wrap;
 
 
 
-.mid-section-container-mobile {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
 
-.card-mobile {
-      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-      transition: 0.3s;
-      border-radius: 5px;
-      max-width: 250px;
 
-}
 
-.card:hover {
-      box-shadow: 0 8px 16px 0 rgba(0,0,0,0,2);
-}
 
-.moviesectioncontainer {
 
-      padding: 2px 16px;
-}
-
-.movie-img {
-
-      width:250px;
-       height:150px; 
-       border-radius:5px 5px 0 0;
-}
-
-.mobile-information {
+section {
       display: flex;
-      justify-content: center;
-      align-items: center;
+    background-color: black;
+      flex-wrap: wrap;
+      flex-direction: row;
 }
+.image {
+      position: relative;
+      
+}
+
+.image__img {
+      display: block;
+      width: 270px;
+      height: 200px;
+      border:2px solid black
+      
+}
+
+.image__overlay{
+      
+      
+      border-radius: 10px;
+      position:absolute;
+      top:0;
+      left:0;
+      width:270px;
+      height:100%;
+      background: rgba(0,0,0,0.6);
+      color:white;
+      display:flex;
+      font-family: 'Quicksand';
+       flex-direction:column;
+      align-items:center;
+      opacity:0;
+      justify-content:center;
+      transition: opacity 0.30s;
+      ;
+    }
+
+  
+
+    .image__overlay--blur {
+      backdrop-filter:blur(5px);
+    }
+    .image__overlay:hover {
+      opacity:1;
+    
+    
+    }
+      
+    .image__overlay:hover > * {
+     
+      
+    }
+    
+    
+    .image__title {
+      font-size:2em;
+      font-weight:bold;
+      
+    }
+    
+    .image__description {
+      font-size:1.25em;
+      margin-top:0.25em;
+    }
+      
+      .image__overlay--primary {
+        background:#000000;
+      }
