--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,7 +14,7 @@ font-family: 'Poppins', sans-serif;
 
 body {
       background-color: var(--background);
-gap: 1em;
+background-image: url(/Images/blurry-gradient-haikei.png);
 min-height: 100vh;
 display: grid;
 grid-template-rows: auto auto 1fr auto;
@@ -35,12 +35,7 @@ footer {grid-area: footer;}
 /*Styling*/
 
 
-nav,   footer {
 
-      background-color: var(--zilla);
-      color: var(--background);
-      }
-      
 /*navigation*/
 ul {
      display: flex;
@@ -89,6 +84,7 @@ li {
       border-radius: 5%;
        width: 150px;
        height: auto;
+       
  }
  
 .SElogo {
@@ -98,7 +94,11 @@ li {
        height: 80px;
 
  }
-
+.slogan {
+      color: white;
+      display: flex;
+      justify-content: center;
+}
 
 /*Header logo
 
@@ -118,16 +118,16 @@ li {
       display: flex;
       justify-content: flex-start;
       flex-wrap: wrap;
-      background: rgb(255, 255, 255);
+      background: rgb(0, 0, 0);
      
     }
     .card {
       width: var(--cardWidth);
       height: var(--cardHeight);
       margin: var(--cardMargin);
-      border: 0.4px solid rgb(239, 231, 231);
+      
       border-radius: 8px;
-      background: rgb(255, 255, 255);
+      background: linear-gradient(black, rgb(116, 104, 104));
       box-sizing: border-box;
     }
     .img {
@@ -152,7 +152,7 @@ li {
   /*Footer*/
 .footer-bar {
 display: flex;
-
+color: white;
 gap: 0.5em;
 width: 100%;
 flex-wrap: wrap;
@@ -183,6 +183,9 @@ flex-wrap: wrap;
       
     
 }
+.copyright {
+      font-size: x-small;
+}
 
 
 
@@ -211,20 +214,21 @@ flex-wrap: wrap;
 
 
     body {
-        background-color: var(--red);
+      background-image: url(/Images/blurry-gradient-haikei.png);
+        
         grid: 'banner banner' auto
               'nav main' 1fr
               'nav footer' auto
               / 12em 1fr;
       }
 
-      nav {outline: 5px dotted rgb(23, 21, 21); }
-      header {outline: 5px dotted yellow;}
-      main {outline: 5px dotted yellow; background-color: black;}
-      footer {outline: 5px dotted yellow;}
+      nav {}
+      header { }
+      main { }
+      footer { color: white;}
       
       
-      
+ 
 
       .SElogo {
             display: block;
@@ -233,6 +237,7 @@ flex-wrap: wrap;
             border-radius: 5%;
              width: 150px;
              height: auto;
+             filter: brightness(1.75);
        }
        
       .SElogo {
@@ -303,9 +308,14 @@ flex-wrap: wrap;
   
     .main-section {
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
       flex-wrap: wrap;
-      background: rgb(0, 0, 0);
+      width: 1500px;
+      height: 600px;
+     background-color: rgba(134, 37, 220, 0.155);
+     
+     
+      
      
     }
     .card {
@@ -314,8 +324,9 @@ flex-wrap: wrap;
       margin: var(--cardMargin);
       border: 0.4px solid rgb(0, 0, 0);
       border-radius: 8px;
-      background: linear-gradient(black, #012325);
+      background: linear-gradient(rgb(98, 19, 19), #012325);
       box-sizing: border-box;
+      opacity: 2;
     }
     .img {
       width: 248px;
