--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,20 +1,28 @@
 :root {
-      --background: #f5f5f5;
+      --white: #f5f5f5;
       --zilla: #000000;
       --purple: #8a2be2;
       --red: #ff0000;
       }
           
-*{
+*.
+*::before,
+*::after{
 margin: 0%;
 padding: 0%;
 box-sizing: border-box;
 font-family: 'Poppins', sans-serif;
 }
 
+html {
+      font-size: 62.5%;
+}
+
+
 body {
-      background-color: var(--background);
-background-image: url(/Images/blurry-gradient-haikei.png);
+      background-color: rgb(0, 0, 0);
+
+
 min-height: 100vh;
 display: grid;
 grid-template-rows: auto auto 1fr auto;
@@ -31,8 +39,39 @@ main {grid-area: main;  }
 footer {grid-area: footer;}
 
 
+/*Header*/
 
-/*Styling*/
+.logo {
+      display: block;
+   margin-left: auto;
+   margin-right:auto;
+      border-radius: 5%;
+       width: 100px;
+       height: auto;
+       filter: brightness(1.75);
+ }
+ 
+.logo {
+      
+       border-radius: 5%;
+       width: auto;
+       height: 80px;
+
+ }
+
+
+
+/*Header*/
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -56,13 +95,13 @@ li {
 
 
 .topbar {
-      font-size: 15px;
+      font-size: 1.3rem;
       font-weight: bold;
       position: relative; /*Static?*/
       display: block;
       padding: 4px 0;
       font-family: 'Poppins', sans-serif;
-      color: var(--background);
+      color: var(--white);
       text-decoration: none;
       text-transform: uppercase;
       -webkit-transition: color 1s;
@@ -70,37 +109,12 @@ li {
 
 }
 .topbar:hover {
-      color: #b60085;
+      color:yellow;
   }
 /*Navigation*/
 
-/*header logo*/
 
 
-.SElogo {
-      display: block;
-   margin-left: auto;
-   margin-right:auto;
-      border-radius: 5%;
-       width: 150px;
-       height: auto;
-       
- }
- 
-.SElogo {
-      
-       border-radius: 5%;
-       width: auto;
-       height: 80px;
-
- }
-.slogan {
-      color: white;
-      display: flex;
-      justify-content: center;
-}
-
-/*Header logo
 
 
 
@@ -108,7 +122,7 @@ li {
 /* MAIN */
 :root {
       --cardWidth: 250px;
-      --cardHeight: 250px;
+      --cardHeight: 200px;
       --cardMargin: 16px;
     }
     
@@ -118,7 +132,9 @@ li {
       display: flex;
       justify-content: flex-start;
       flex-wrap: wrap;
-      background: rgb(0, 0, 0);
+      
+           
+      border-radius: 1rem;
      
     }
     .card {
@@ -126,14 +142,54 @@ li {
       height: var(--cardHeight);
       margin: var(--cardMargin);
       
+      backdrop-filter: blur(10px) saturate(137%);
+      -webkit-backdrop-filter: blur(10px) saturate(137%);
+      background-color: rgba(202, 195, 245, 0.51);
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.125);
+
+      border-radius: 12px;
+      border: 1px solid rgba(255, 255, 255, 0.125);
       border-radius: 8px;
-      background: linear-gradient(black, rgb(116, 104, 104));
+
       box-sizing: border-box;
     }
+
     .img {
-      width: 248px;
+      width: var(--cardWidth);
       border-radius: 8px;
     }
+
+
+    .card-long {
+display: block;
+box-sizing: border-box;
+
+background-color: var(--white);
+border-radius: 12px;
+width:53rem ;
+height: 35rem;
+margin-left: auto;
+margin-right: auto;
+
+background: rgb(255,0,0);
+background: linear-gradient(90deg, rgba(255,0,0,0.8204014027485994) 0%, rgba(0,0,0,1) 30%, rgba(25,0,0,1) 78%, rgba(255,0,0,1) 100%); 
+
+
+
+    }
+
+    .batman-stretch {
+      width:53rem;
+      height: 25rem;
+      border-radius: 12px;
+      opacity: 1;
+      display: block;
+      transition: .5s ease;
+      backface-visibility: hidden;
+
+    }
+   
 
     .title {
       display: flex;
@@ -214,7 +270,7 @@ flex-wrap: wrap;
 
 
     body {
-      background-image: url(/Images/blurry-gradient-haikei.png);
+      
         
         grid: 'banner banner' auto
               'nav main' 1fr
@@ -222,15 +278,75 @@ flex-wrap: wrap;
               / 12em 1fr;
       }
 
-      nav {}
-      header { }
-      main { }
-      footer { color: white;}
+    
+
+
+
+
+
+
+
+      ul {
+            display: flex;
+            flex-direction: row; 
+            justify-content: space-around;
+            list-style-type: none;
+            flex-wrap: wrap;
+       }
+       li {
+             padding: 6px 0;
+       }
+       .right-bar {
+             display: flex;
+             justify-content: center;
+             gap: 1rem;
+       }
+       
+       
+       
+       .topbar {
+             font-size: 15px;
+             font-weight: bold;
+             position: relative; /*Static?*/
+             display: block;
+             padding: 4px 0;
+             font-family: 'Poppins', sans-serif;
+             color: var(--background);
+             text-decoration: none;
+             text-transform: uppercase;
+             -webkit-transition: color 1s;
+             transition: color 1s;  /*change color after finish */
+       
+       }
+       .topbar:hover {
+             color: #b60085;
+         }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       
       
  
 
-      .SElogo {
+      .logo {
             display: block;
          margin-left: auto;
          margin-right:auto;
@@ -240,7 +356,7 @@ flex-wrap: wrap;
              filter: brightness(1.75);
        }
        
-      .SElogo {
+      .logo {
             
              border-radius: 5%;
              width: auto;
@@ -297,6 +413,12 @@ flex-wrap: wrap;
 
 
 
+
+
+
+
+
+
 /* MAIN */
 :root {
       --cardWidth: 250px;
@@ -350,6 +472,11 @@ flex-wrap: wrap;
 
 
 }
+
+
+
+
+
 
 
 
