--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,7 +35,7 @@ grid-template-areas:
 
 header {grid-area: banner; }
 nav {grid-area: nav;}
-main {grid-area: main;  }
+main {grid-area: main;}
 footer {grid-area: footer;}
 
 
@@ -45,7 +45,7 @@ footer {grid-area: footer;}
       display: block;
    margin-left: auto;
    margin-right:auto;
-      border-radius: 5%;
+      
        width: 100px;
        height: auto;
        filter: brightness(1.75);
@@ -53,9 +53,9 @@ footer {grid-area: footer;}
  
 .logo {
       
-       border-radius: 5%;
+     
        width: auto;
-       height: 80px;
+            height:100px
 
  }
 
@@ -76,41 +76,33 @@ footer {grid-area: footer;}
 
 
 /*navigation*/
+a {
+color: white;
+}
 ul {
-     display: flex;
-     flex-direction: row; 
-     justify-content: space-around;
-     list-style-type: none;
-     flex-wrap: wrap;
-}
-li {
-      padding: 6px 0;
-}
-.right-bar {
-      display: flex;
+      ;
       justify-content: center;
-      gap: 1rem;
+     margin: auto;
+      width: 450px;
+      display: flex;
+      flex-direction: row;
+      list-style: none;
+      padding: 15px 0;
+      border-radius: 25px;
+      border: 0.1px solid#000000;
+      box-shadow: 0 4px 8px 0 #000000, 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
 
+li{
+      margin: auto;
 
-
-.topbar {
-      font-size: 1.3rem;
-      font-weight: bold;
-      position: relative; /*Static?*/
+}
+li:after {
       display: block;
-      padding: 4px 0;
-      font-family: 'Poppins', sans-serif;
-      color: var(--white);
-      text-decoration: none;
-      text-transform: uppercase;
-      -webkit-transition: color 1s;
-      transition: color 1s;  /*change color after finish */
-
 }
-.topbar:hover {
-      color:yellow;
-  }
+li:hover:after {
+      transform: scaleX(1);
+}
 /*Navigation*/
 
 
@@ -129,11 +121,10 @@ li {
   
   
     .main-section {
+      outline: 1px dotted yellow;
       display: flex;
       justify-content: flex-start;
-      flex-wrap: wrap;
       
-           
       border-radius: 1rem;
      
     }
@@ -178,6 +169,7 @@ li {
     .img {
       width: var(--cardWidth);
       border-radius: 8px;
+      
     }
 
     .info {
@@ -204,12 +196,14 @@ li {
       position:relative;
       width:100%;
       height:35rem;
+      margin-top: 3%;
      
       
     }
     
 
     .button {
+      text-decoration: none;
       font-size: larger;
       height: 4rem;
       width: 10rem;
@@ -227,7 +221,7 @@ color: white;
       border-radius: 1rem;
       
     }
-
+/* MAIN */
 
     /*Overlay effect from Youtube, created in codepen */
     
@@ -332,10 +326,11 @@ color: white;
 gap: 0.5em;
 width: 100%;
 flex-wrap: wrap;
-font-size: 15px;
+font-size: 10px;
 font-weight: bold;
 font-size: 'Poppins', sans-serif;
 justify-content: space-between;
+
 }
 
 
@@ -366,6 +361,22 @@ flex-wrap: wrap;
 }
 
 
+.visa {
+      color: white;
+
+}
+.mastercard {
+      color: white;
+}
+.paypal {
+      color: rgb(0, 106, 255);
+}
+.googlepay {
+      color: rgb(255, 255, 255);
+}
+
+
+
 
 /*Footer*/
 
@@ -378,95 +389,49 @@ flex-wrap: wrap;
 
 
 
-/*Styling desktop */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Styling desktop *//*Styling desktop *//*Styling desktop *//*Styling desktop *//*Styling desktop *//*Styling desktop *//*Styling desktop */
 
 @media (min-width: 600px) {
 
-      *{
+      *
+     
+      {
             margin: 0%;
             padding: 0%;
             box-sizing: border-box;
             font-family: 'Poppins', sans-serif;
             }
 
+html {
+      font-size: 62.5%;
+}
 
-
-    body {
-      
-        
+    
+body {        
         grid: 'banner banner' auto
               'nav main' 1fr
               'nav footer' auto
               / 12em 1fr;
       }
 
-    
 
-
-
-
-
-
-
-      ul {
-            display: flex;
-            flex-direction: row; 
-            justify-content: space-around;
-            list-style-type: none;
-            flex-wrap: wrap;
-       }
-       li {
-             padding: 6px 0;
-       }
-       .right-bar {
-             display: flex;
-             justify-content: center;
-             gap: 1rem;
-       }
-       
-       
-       
-       .topbar {
-             font-size: 15px;
-             font-weight: bold;
-             position: relative; /*Static?*/
-             display: block;
-             padding: 4px 0;
-             font-family: 'Poppins', sans-serif;
-             color: var(--background);
-             text-decoration: none;
-             text-transform: uppercase;
-             -webkit-transition: color 1s;
-             transition: color 1s;  /*change color after finish */
-       
-       }
-       .topbar:hover {
-             color: #b60085;
-         }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      
-      
- 
+/*Header*/
 
       .logo {
             display: block;
@@ -486,53 +451,31 @@ flex-wrap: wrap;
       
        }
 
+/*Header*/
+      
+      
+   /*nav*/
 
-      
-      
-      
-      ul {
-            
-            display: flex;
-            height: 45em;
-            
-            flex-direction: column; 
-            justify-content: space-around;
-            list-style-type: none;
-            align-items: center;
-           
-       }
-       li {
-             padding: 6px 0;
-       }
-       
+/*navigation*/
+
+    
+      /*Navigation*/
       
 
 
-       .topbar {
-             position: relative; /*Static?*/
-             display: block;
-             padding: 4px 0;
-             font-family: sans-serif;
-             color: var(--background);
-             text-decoration: none;
-             text-transform: uppercase;
-             -webkit-transition: color 1s;
-        transition: color 1s;  /*change color after finish */
-
-       }
-
-       .topbar:hover {
-            color: #ff0000;
-        }
-.right-bar {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      gap: 1rem;
 
 
-}
 
+
+
+
+
+
+
+
+
+
+   /*nav*/
 
 
 
@@ -549,44 +492,7 @@ flex-wrap: wrap;
     }
     
   
-  
-    .main-section {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      width: 1500px;
-      height: 600px;
-     background-color: rgba(134, 37, 220, 0.155);
-     
-     
-      
-     
-    }
-    .card {
-      width: var(--cardWidth);
-      height: var(--cardHeight);
-      margin: var(--cardMargin);
-      border: 0.4px solid rgb(0, 0, 0);
-      border-radius: 8px;
-      background: linear-gradient(rgb(98, 19, 19), #012325);
-      box-sizing: border-box;
-      opacity: 2;
-    }
-    .img {
-      width: 248px;
-      border-radius: 8px;
-    }
-
-    .title {
-      display: flex;
-      justify-content: center;
-      font-style: 'Poppins', sans-serif;
-      font-weight: bold;
-    }
-
-
-
-/*main*/
+ 
 
 
 
@@ -596,6 +502,7 @@ flex-wrap: wrap;
 }
 
 
+/*Styling desktop */
 
 
 
@@ -609,16 +516,9 @@ flex-wrap: wrap;
 
 
 
-.visa {
-      color: white;
-;
-}
-.mastercard {
-      color: white;
-}
-.paypal {
-      color: rgb(0, 106, 255);
-}
-.googlepay {
-      color: rgb(255, 255, 255);
-}
+
+
+
+
+/*all movies */
+
