--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -11,7 +11,7 @@
 margin: 0%;
 padding: 0%;
 box-sizing: border-box;
-font-family: 'Poppins', sans-serif;
+font-family: 'Roboto', sans-serif;
 }
 
 html {
@@ -119,186 +119,142 @@ li:hover:after {
 
 
 /* MAIN */
-:root {
-    --cardWidth: 280px;
-    --cardHeight: 270px;
-    --cardMargin: 1px;
-  }
-  
 
 
-  .main-section {
-    outline: 1px dotted yellow;
-    display: flex;
-    justify-content:center;
+
+.mainscreen
+{
+	min-height: 80vh;
+	width: 100%;
+	display: flex;
+    flex-direction: column;
     
-    
-    border-radius: 1rem;
-   
-  }
-  .card1 {
-    width: var(--cardWidth);
-    height: var(--cardHeight);
-    margin: var(--cardMargin);
-    
-    backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(17, 25, 40, 1);
-    border-radius: 12px;
-    
-    
-   
-   
-
-    border-radius: 12px;
-   
-   
-
-    box-sizing: border-box;
-  }
-.card2 {
-
-    width: var(--cardWidth);
-    height: var(--cardHeight);
-    margin: var(--cardMargin);
-    
-    backdrop-filter: blur(16px) saturate(180%);
-    -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: rgba(59, 11, 71, 1);
-    border-radius: 12px;
-   
-
-    border-radius: 12px;
- 
-    box-sizing: border-box;
-
+    color:var(--white)
 }
 
-.btn {
-    transition-property: background;
-    transition-duration: 3s;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
-    width: 50px;
-height: 3rem;
-    color: var(--zilla);
-    background: linear-gradient(90deg, rgb(255, 255, 255) 100%, rgb(255, 255, 255) 100%); 
+.card {
+	width: 60rem;
+    margin: auto;
+    background: rgb(0, 0, 0);
+    position:center;
+    align-self: center;
+    top: 50rem;
+    border-radius:1rem;
+    box-shadow: 4px 3px 20px #3535358c;
+    display:flex;
+    flex-direction: row;
     
-    margin-left: 37%;
-    border-radius: 5px;
-  }
-  
-  .btn:hover {
-    background: rgb(113, 64, 236);
-  }
+}
 
-
-  .img {
-    width: var(--cardWidth);
-    border-radius: 8px;
-    
-  }
-
-  .info {
-    color: gold;
-    font-size: 1.5rem;
-    display: flex;
+.leftside {
+	background: #030303;
+	width: 25rem;
+	display: inline-flex;
+    align-items: center;
     justify-content: center;
+	border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+}
 
- }
+.product {
+    object-fit: cover;
+	width: 38rem;
+    height: 20em;
+    
+}
 
-  .title {
+.rightside {
+    background-color: #000000;
+	width: 35rem;
+	border-bottom-right-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+    padding: 1rem 2rem 3rem 3rem;
+}
+
+p{
+    display:block;
+    font-size: 1.1rem;
+    font-weight: 400;
+    margin: .8rem 0;
+}
+
+.inputbox
+{
+    color:#030303;
+	width: 100%;
+    padding: 0.5rem;
+    border: none;
+    border-bottom: 1.5px solid #ccc;
+    margin-bottom: 1rem;
+    border-radius: 0.3rem;
+    font-family: 'Roboto', sans-serif;
+    color: #615a5a;
+    font-size: 1.1rem;
+    font-weight: 500;
+  outline:none;
+}
+
+.expcvv {
+    display:flex;
+    justify-content: space-between;
+    padding-top: 0.6rem;
+}
+
+.expcvv_text{
+    padding-right: 1rem;
+}
+.expcvv_text2{
+    padding:0 1rem;
+}
+
+.button{
+    background: linear-gradient(
+        120deg
+, #ff0000 0%, #ff0000 100%);
+    padding: 15px;
+    border: none;
+    border-radius: 50px;
     color: white;
-    font-size: 2rem;
-    display: flex;
-    justify-content: center;
-    font-style: 'Poppins', sans-serif;
-    font-weight: bold;
-  }
-
-
-
-
-  .image {
-    display: flex;
-    flex-wrap: wrap;
-    
-    position:relative;
+    font-weight: 400;
+    font-size: 1.2rem;
+    margin-top: 10px;
     width:100%;
-    height:35rem;
-    margin-top: 3%;
-   
-    
-  }
-  
+    letter-spacing: .11rem;
+    outline:none;
+}
 
-  
-  
-  
-  .image__img {
-    display: block;
-    width:50%;
-    border-radius: 1rem;
-   height: 80%;
-    
-  }
+.button:hover
+{
+	transform: scale(1.05) translateY(-3px);
+    box-shadow: 3px 3px 6px #38373785;
+}
 
 
 
 
 
+@media only screen and (max-width: 1000px) {
+    .card{
+        flex-direction: column;
+        width: auto;
+      
+    }
 
+    .leftside{
+        width: 100%;
+        border-top-right-radius: 0;
+        border-bottom-left-radius: 0;
+      border-top-right-radius:0;
+      border-radius:0;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* MAIN */
-
-
-
-
-
-
-/*Batman picture is Warnes Bros Copyrighted any suggestions?*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    .rightside{
+        width:auto;
+        border-bottom-left-radius: 1.5rem;
+        padding:0.5rem 3rem 3rem 2rem;
+      border-radius:0;
+    }
+}
 
 
 
@@ -510,105 +466,115 @@ a {
 
 
 
-
-
 /* MAIN */
-:root {
-    --cardWidth: 300px;
-    --cardHeight: 230px;
-    --cardMargin: 16px;
-  }
-  
-
-
-  .main-section {
-    outline: 1px dotted yellow;
-    display: flex;
-    justify-content: center;
+.mainscreen
+{
+	min-height: 80vh;
+	width: 100%;
+	display: flex;
+    flex-direction: column;
     
-    border-radius: 1rem;
-   
-  }
-  .card1 {
-    width: var(--cardWidth);
-    height: var(--cardHeight);
-    margin: var(--cardMargin);
-    
-    backdrop-filter: blur(16px) saturate(180%);
-    
-    background-color: rgba(17, 25, 40, 1);
-    border-radius: 12px;
-    
-    
-   
-   
-
-    border-radius: 12px;
-   
-   
-
-    box-sizing: border-box;
-  }
-.card2 {
-
-    width: var(--cardWidth);
-    height: var(--cardHeight);
-    margin: var(--cardMargin);
-    
-    backdrop-filter: blur(16px) saturate(180%);
-    
-    background-color: rgba(59, 11, 71, 1);
-    border-radius: 12px;
-   
-
-    border-radius: 12px;
-    
-
-    box-sizing: border-box;
-
-}
-  .img {
-    width: var(--cardWidth);
-    border-radius: 8px;
-    
-  }
-
-  .info {
-    color: gold;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
-
- }
-
- 
-
-
-
-
-  .image__img {
-    
-    width:40%;
-    height:35rem;
-  
-   
-    
-  }
-  
-.image {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    flex-wrap: wrap;
-  
-
+    color:var(--white)
 }
 
+.card {
+	width: 60rem;
+    margin: auto;
+    background: rgb(0, 0, 0);
+    position:center;
+    align-self: center;
+    top: 50rem;
+    border-radius:1rem;
+    box-shadow: 4px 3px 20px #3535358c;
+    display:flex;
+    flex-direction: row;
+    
+}
 
-   
+.leftside {
+	background: #030303;
+	width: 25rem;
+	display: inline-flex;
+    align-items: center;
+    justify-content: center;
+	border-top-left-radius: 1.5rem;
+    border-bottom-left-radius: 1.5rem;
+}
 
-  }
-  
+.product {
+    object-fit: cover;
+	width: 20rem;
+    height: 20rem;
+    border-radius: 5px;
+}
+
+.rightside {
+    background-color: #000000;
+	width: 35rem;
+	border-bottom-right-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
+    padding: 1rem 2rem 3rem 3rem;
+}
+
+p{
+    display:block;
+    font-size: 1.1rem;
+    font-weight: 400;
+    margin: .8rem 0;
+}
+
+.inputbox
+{
+    color:#030303;
+	width: 100%;
+    padding: 0.5rem;
+    border: none;
+    border-bottom: 1.5px solid #ccc;
+    margin-bottom: 1rem;
+    border-radius: 0.3rem;
+    font-family: 'Roboto', sans-serif;
+    color: #615a5a;
+    font-size: 1.1rem;
+    font-weight: 500;
+  outline:none;
+}
+
+.expcvv {
+    display:flex;
+    justify-content: space-between;
+    padding-top: 0.6rem;
+}
+
+.expcvv_text{
+    padding-right: 1rem;
+}
+.expcvv_text2{
+    padding:0 1rem;
+}
+
+.button{
+    background: linear-gradient(
+        120deg
+, #ff0000 0%, #ff0000 100%);
+    padding: 15px;
+    border: none;
+    border-radius: 50px;
+    color: white;
+    font-weight: 400;
+    font-size: 1.2rem;
+    margin-top: 10px;
+    width:100%;
+    letter-spacing: .11rem;
+    outline:none;
+}
+
+.button:hover
+{
+	transform: scale(1.05) translateY(-3px);
+    box-shadow: 3px 3px 6px #38373785;
+}
+
+
 
 /* MAIN */
 
@@ -653,4 +619,22 @@ a {
 
 
 /*all movies */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
