--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,7 +20,7 @@ html {
 
 
 body {
-      background-color: rgb(28, 3, 96);
+      background-color: rgba(0, 0, 0, 0.973);
 
 
 min-height: 100vh;
@@ -128,14 +128,18 @@ li:hover:after {
   
   
     .main-section {
-      outline: 1px dotted yellow;
+     
       display: flex;
       justify-content:center;
       
+      margin-top: 5%;
       
-      border-radius: 1rem;
-     
+     gap: 1em;
     }
+    
+
+ 
+
     .card1 {
       width: var(--cardWidth);
       height: var(--cardHeight);
@@ -143,8 +147,7 @@ li:hover:after {
       
       backdrop-filter: blur(16px) saturate(180%);
       -webkit-backdrop-filter: blur(16px) saturate(180%);
-      background-color: rgba(17, 25, 40, 1);
-      border-radius: 12px;
+      background-color: hsla(252, 91%, 9%, 0.671);
       
       
      
@@ -164,7 +167,7 @@ li:hover:after {
       
       backdrop-filter: blur(16px) saturate(180%);
       -webkit-backdrop-filter: blur(16px) saturate(180%);
-      background-color: rgba(59, 11, 71, 1);
+      background-color: rgb(59, 11, 71);
       border-radius: 12px;
      
 
@@ -177,25 +180,25 @@ li:hover:after {
 .btn {
       transition-property: background;
       transition-duration: 3s;
-      font-weight: bold;
-      font-family: 'Poppins', sans-serif;
-      width: 50px;
-height: 3rem;
-      color: var(--zilla);
-      background: linear-gradient(90deg, rgb(255, 255, 255) 100%, rgb(255, 255, 255) 100%); 
       
-      margin-left: 37%;
+      font-family: 'Poppins', sans-serif;
+      
+height: 3rem;
+      color: var(--purple);
+      background: linear-gradient(90deg, rgb(0, 0, 0) 100%, rgb(0, 0, 0) 100%); 
+      
+      margin-left: 35%;
       border-radius: 5px;
     }
     
     .btn:hover {
-      background: rgb(113, 64, 236);
+      background: rgb(240, 0, 0);
     }
 
 
     .img {
       width: var(--cardWidth);
-      border-radius: 8px;
+      
       
     }
 
@@ -221,14 +224,13 @@ height: 3rem;
 
     .image {
       display: flex;
-      flex-wrap: wrap;
-      
-      position:relative;
-      width:100%;
+      flex-direction: column;
+      align-items: center;
+     width: auto;
       height:35rem;
       margin-top: 3%;
-     
-      
+     gap: 1em;
+    
     }
     
 
@@ -237,9 +239,9 @@ height: 3rem;
     
     .image__img {
       display: block;
-      width:50%;
+      width:80%;
       border-radius: 1rem;
-     height: 80%;
+     height: 100%;
       
     }
 
@@ -319,19 +321,23 @@ height: 3rem;
 display: flex;
 color: white;
 gap: 0.5em;
-width: 100%;
+width: auto;
 flex-wrap: wrap;
 font-size: 2rem;
 font-weight: bold;
 font-size: 'Poppins', sans-serif;
 justify-content: space-between;
+margin-top: 2rem;
+outline: 2px dotted yellow;
+height: 10vh;
+align-items: center;
 
 }
 
 
 .siteinfocont {
       margin-right: auto;
-  
+  ;
 }
 
 
@@ -352,7 +358,8 @@ flex-wrap: wrap;
 .copyright {
       font-size: x-small;
       display: flex;
-      align-items: center;
+      justify-content: center;
+      align-items: flex-end;
 }
 
 
@@ -372,6 +379,39 @@ flex-wrap: wrap;
 
 
 
+/*about*/
+.about-container {
+
+      
+      width: auto;
+      height: 50rem;
+      margin-top: 25%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 10px 0;
+      
+
+}
+
+.info-container {
+
+width: 50rem;
+height: 40rem;
+padding: 15px 0;
+
+}
+
+.info {
+font-weight: bold;
+color: white;
+font-size: medium;
+
+}
+.about {
+      cursor: pointer;
+}
+/*about*/
 
 /*Footer*/
 
